[package]
name = "rust-xlsx-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.22.0"
rayon = "1.7.0"
regex = "1.9.5"
rust_xlsxwriter = "0.48.0"
unicode-segmentation = "1.10.1"
xlsxwriter = "0.6.0"
