[package]
name = "decimal_processing_xlsx_vesmar"
version = "0.4.2"

edition = "2021"

[lib]
name = "decimal_processing_xlsx_vesmar"
crate_type = ["cdylib"]

[dependencies]
pyo3 = { version = "*", features = ["extension-module", "abi3-py37"] }
calamine = "0.22.0"
unicode-segmentation = "1.10.1"
xlsxwriter = "0.6.0"

[target.x86_64-apple-darwin]
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]
[target.aarch64-apple-darwin]
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]

#[package.metadata.maturin.manylinux]
#py36 = true
#py37 = true
#py38 = true
#py39 = true
#py310 = true